<resources>
    <string name="app_name">RickAndMorty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="enter_username">enter username</string>
    <string name="enter_password">enter password</string>
    <string name="log_in">Log in</string>
    <string name="repeat_password">repeat password</string>
    <string name="register">Register</string>
    <string name="logout">logout</string>
</resources>